public static class GlobalStrings
{
    #region Global
    public const string HORIZONTAL = "Horizontal";
    public const string COMPONENTS = "COMPONENTS";
    public const string STATES = "STATES";
    #endregion

    #region Enemy
    public const string E_PATROL = "Patrol";
    public const string E_ATTACK = "Attack";
    public const string E_CHASE = "Chase";
    public const string E_HITTED = "Hitted";
    #endregion

    #region Pool
    public const string Pool_EnemyAttack = "Enemy_Attack";
    #endregion

    #region Player
    public const string P_RUN = "Run";
    public const string P_JUMP = "Jump";
    public const string P_JUMPT = "JumpT";
    public const string P_EXPLODE = "Explode";
    public const string P_PUSH = "Push";
    public const string P_PULL = "Pull";
    public const string P_WALLSLIDE = "WallSlide";
    public const string P_WALLSLIDET = "WallSlideT";
    public const string P_LEDGECLIMB = "LedgeClimb";
    public const string P_HITTED = "Hitted";
    #endregion
}
